working on working dynamic img export/import

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -18,8 +18,9 @@
 }
 
 body {
-    background-image: url("../../assets/carousel/cows.jpg");
+    background-image: url("../public/carousel/cows.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    font-size: medium;
 
 }
