--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,8 @@
 }
 
 body {
-  background-image: url("../../assets/carousel/cows.jpg");
+  background-image: url("../public/carousel/cows.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  font-size: medium;
 }/*# sourceMappingURL=globals.css.map */
