--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,7 +22,7 @@ body {
   background-image: url("../public/carousel/cows.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  font-size: medium;
+  height: 100vh;
 }
 
 .active {
@@ -33,16 +33,16 @@ body {
 }
 
 .nav__container {
+  width: 100%;
   display: flex;
   justify-content: space-between;
-  padding: 0.5rem 2rem;
+  padding: 0.4rem 1rem;
   background-color: var(--color-white);
-  font-size: 1.2rem;
+  font-size: 0.96rem;
   position: sticky;
   z-index: 100;
 }
-
-.nav__brand {
+.nav__container .nav__brand {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -50,8 +50,7 @@ body {
   max-width: 1200px;
   margin: 0 auto;
 }
-
-.nav__navbar {
+.nav__container .nav__navbar {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -60,22 +59,22 @@ body {
   margin: 0 auto;
   padding-bottom: 0.1rem;
 }
-.nav__navbar ul {
+.nav__container .nav__navbar ul {
   display: flex;
   list-style: none;
 }
-.nav__navbar ul li {
+.nav__container .nav__navbar ul li {
   margin: 0 1rem;
 }
-.nav__navbar ul li a {
+.nav__container .nav__navbar ul li a {
   color: var(--color-black);
   position: relative;
   text-decoration: none;
 }
-.nav__navbar ul li a:hover {
+.nav__container .nav__navbar ul li a:hover {
   color: var(--color-darkgreen);
 }
-.nav__navbar ul li a::before {
+.nav__container .nav__navbar ul li a::before {
   content: "";
   position: absolute;
   width: 100%;
@@ -88,7 +87,36 @@ body {
   transform: scaleX(0);
   transition: transform 0.3s ease-in-out;
 }
-.nav__navbar ul li a:hover::before {
+.nav__container .nav__navbar ul li a:hover::before {
   transform-origin: left;
   transform: scaleX(1);
+}
+@media (max-width: 1024px) {
+  .nav__container {
+    flex-direction: column;
+    position: fixed;
+    background-color: var(--color-lightgreen);
+    opacity: 0.9;
+    margin-right: 1rem;
+  }
+  .nav__container .nav__brand {
+    height: 50px;
+    width: 100%;
+  }
+  .nav__container .nav__navbar {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  .nav__container .nav__navbar ul {
+    flex-direction: column;
+  }
+  .nav__container .nav__navbar ul li {
+    margin: 1rem 0;
+    text-align: center;
+  }
+}
+@media (max-width: 640px) {
+  .nav__container .nav__brand {
+    display: none;
+  }
 }/*# sourceMappingURL=globals.css.map */
