--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -22,7 +22,7 @@ body {
     background-image: url("../public/carousel/cows.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    font-size: medium;
+    height: 100vh;
 }
 
 .active {
@@ -37,67 +37,104 @@ body {
 // NAVIGATION BAR
 
 .nav__container {
+    width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 0.5rem 2rem;
+    padding: 0.4rem 1rem;
     background-color: var(--color-white);
-    font-size: 1.2rem;
+    font-size: 0.96rem;
     position: sticky;
     z-index: 100;
-}
 
-.nav__brand {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-.nav__navbar {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding-bottom: 0.1rem;
-
-    ul {
+    .nav__brand {
         display: flex;
-        list-style: none;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+    .nav__navbar {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        width: 100%;
+        max-width: 1200px;
+        margin: 0 auto;
+        padding-bottom: 0.1rem;
         
-        li {
-            margin: 0 1rem;
-
-            a {
-                color: var(--color-black);
-                position: relative;
-                text-decoration: none;
-
-                &:hover {
-                    color: var(--color-darkgreen);
+        ul {
+            display: flex;
+            list-style: none;
+            
+            li {
+                margin: 0 1rem;
+    
+                a {
+                    color: var(--color-black);
+                    position: relative;
+                    text-decoration: none;
+                    
+                    &:hover {
+                        color: var(--color-darkgreen);
+                    }
+                    &::before {
+                        content: '';
+                        position: absolute;
+                        width: 100%;
+                        height: 3px;
+                        border-radius: 4px;
+                        background-color: var(--color-darkgreen);
+                        bottom: -3px;
+                        left: 0;
+                        transform-origin: left;
+                        transform: scaleX(0);
+                        transition: transform .3s ease-in-out;
+                    }
                 }
-                &::before {
-                    content: '';
-                    position: absolute;
-                    width: 100%;
-                    height: 3px;
-                    border-radius: 4px;
-                    background-color: var(--color-darkgreen);
-                    bottom: -3px;
-                    left: 0;
+                a:hover::before {
                     transform-origin: left;
-                    transform: scaleX(0);
-                    transition: transform .3s ease-in-out;
+                    transform: scaleX(1);
                 }
-            }
-            a:hover::before {
-                transform-origin: left;
-                transform: scaleX(1);
             }
         }
     }
+
+    @media (max-width: 1024px) {
+        flex-direction: column;
+        position: fixed;
+        background-color: var(--color-lightgreen);
+        opacity: 0.9;
+        margin-right: 1rem;
+
+        .nav__brand {
+            height: 50px;
+            width: 100%;
+        }
+        .nav__navbar {
+            flex-direction: column;
+
+            align-items: flex-end;
+
+
+            
+            ul {
+                flex-direction: column;
+                
+                li {
+                    margin: 1rem 0;
+                    text-align: center;
+                }
+            }
+        }
+    }
+
+    @media (max-width: 640px) {
+        .nav__brand {
+            display: none;
+        }
+    }
 }
+
+
 
