--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,6 @@
 :root {
     --color-primary: #141414;
-    --secondary: #54595F;
+    --color-secondary: #54595F;
     --color-text: #7A7A7A;
     --color-darksky: #4054B2;
     --color-sky: #3957FF;
@@ -31,6 +31,10 @@ body {
     &::before {
         transform: none !important;
     }
+
+    @media (max-width: 1024px) {
+        color: var(--color-white) !important;
+    }
 }
 
 
@@ -39,7 +43,6 @@ body {
 .nav__container {
     width: 100%;
     display: flex;
-    justify-content: space-between;
     padding: 0.4rem 1rem;
     background-color: var(--color-white);
     font-size: 0.96rem;
@@ -53,6 +56,10 @@ body {
         width: 100%;
         max-width: 1200px;
         margin: 0 auto;
+
+        .nav__img-mobile {
+            display: none;
+        }
     }
     .nav__navbar {
         display: flex;
@@ -63,7 +70,8 @@ body {
         margin: 0 auto;
         padding-bottom: 0.1rem;
         
-        ul {
+        
+        .nav__menu-list {
             display: flex;
             list-style: none;
             
@@ -105,25 +113,49 @@ body {
         position: fixed;
         background-color: var(--color-lightgreen);
         opacity: 0.9;
-        margin-right: 1rem;
+        width: 40%;
+        padding: 0;
+        height: 100vh;
+        right: 0;
+        border-radius: 20px 0 0 20px;
+        
 
         .nav__brand {
-            height: 50px;
+            height: 80px;
             width: 100%;
+            background-color: var(--color-white);
+            border-radius: 20px 0px 20px 0;
+
+            .nav__img-mobile {
+                display: block;
+            }
+            .nav__img-desktop {
+                display: none;
+            }
+
         }
         .nav__navbar {
             flex-direction: column;
-
-            align-items: flex-end;
-
-
+            align-items: flex-start;
+            font-size: 1.2rem;
             
-            ul {
+            .nav__menu-list {
                 flex-direction: column;
+                width: 100%;
                 
                 li {
-                    margin: 1rem 0;
                     text-align: center;
+                    display: flex;
+                    width: 100%;
+                    
+                    margin: 0;
+
+                    a {
+                        display: flex;
+                        padding: 1rem 1rem 1rem 3rem;
+                        border-bottom: 1px solid var(--color-white);
+                        width: 100%;
+                    }
                 }
             }
         }
