--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -285,14 +285,49 @@ body {
 // IMAGE SLIDER
 .imageSlider__container {
     position: relative;
+    height: 60vh;
+    display: flex;
     
     .imageSlider__item {
-        height: 60vh;
-
-        img {
             width: 100%;
             height: 100%;
             object-fit: cover;
+    }
+    .imageSlider__leftArrow {
+        position: absolute;
+        top: 50%;
+        left: 50px;
+        transform: translateY(-50%);
+        z-index: 1000;
+        cursor: pointer;
+        color: var(--color-white);
+
+    }
+    .imageSlider__rightArrow {
+        position: absolute;
+        top: 50%;
+        right: 50px;
+        transform: translateY(-50%);
+        z-index: 1000;
+        cursor: pointer;
+        color: var(--color-white);
+    }
+    .imageSlider__dot-container {
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        display: flex;
+        z-index: 1000;
+        cursor: pointer;
+        
+        .imageSlider__dot {
+            color: var(--color-white);
+            
+            &.active {
+                color: var(--color-darkgreen);
+            }
         }
     }
+
 }
