--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,31 +11,81 @@
   --color-white: #FFF;
 }
 
-* {
+*,
+::after,
+::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
 }
 
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  letter-spacing: var(--spacing);
+  text-transform: capitalize;
+  line-height: 1.25;
+  margin-bottom: 0.75rem;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.25rem;
+}
+
+h4 {
+  font-size: 0.875rem;
+}
+
+p {
+  margin-bottom: 1.25rem;
+  color: var(--clr-grey-5);
+}
+
+@media screen and (min-width: 800px) {
+  h1 {
+    font-size: 4rem;
+  }
+  h2 {
+    font-size: 2.5rem;
+  }
+  h3 {
+    font-size: 1.75rem;
+  }
+  h4 {
+    font-size: 1rem;
+  }
+  body {
+    font-size: 1rem;
+  }
+  h1,
+  h2,
+  h3,
+  h4 {
+    line-height: 1;
+  }
+}
 body {
   background-image: url("../public/carousel/cows.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-}
-body .active {
-  color: var(--color-lightgreen) !important;
-}
-body .active::before {
-  transform: none !important;
-}
-@media (max-width: 1024px) {
-  body .active {
-    color: var(--color-white) !important;
-  }
-}
-body .hidden {
-  display: none !important;
 }
 
 .nav__container {
@@ -46,6 +96,20 @@ body .hidden {
   font-size: 0.96rem;
   position: sticky;
   z-index: 100;
+}
+.nav__container .active {
+  color: var(--color-lightgreen) !important;
+}
+.nav__container .active::before {
+  transform: none !important;
+}
+@media (max-width: 1024px) {
+  .nav__container .active {
+    color: var(--color-white) !important;
+  }
+}
+.nav__container .hidden {
+  display: none !important;
 }
 .nav__container .nav__menu-bar-toggle {
   display: none;
@@ -286,4 +350,122 @@ body .hidden {
 }
 .imageSlider__container .imageSlider__dot-container .imageSlider__dot.active {
   color: var(--color-darkgreen);
+}
+
+.review-container {
+  width: 100%;
+  background-color: var(--color-white);
+}
+.review-container .title {
+  text-align: center;
+  margin-bottom: 2rem;
+  text-transform: capitalize;
+  color: var(--clr-grey-3);
+}
+.review-container .title h2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 500;
+}
+.review-container .title span {
+  font-size: 0.85em;
+  color: var(--clr-primary-5);
+  margin-right: 1rem;
+  font-weight: 700;
+}
+.review-container .section-center {
+  margin: 0 auto;
+  margin-top: 4rem;
+  width: 80vw;
+  /* have to have a height */
+  height: 450px;
+  max-width: 800px;
+  text-align: center;
+  position: relative;
+  display: flex;
+  overflow: hidden;
+}
+.review-container .person-img {
+  border-radius: 50%;
+  margin-bottom: 1rem;
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border: 4px solid var(--clr-grey-8);
+  box-shadow: var(--dark-shadow);
+}
+.review-container article h4 {
+  text-transform: uppercase;
+  color: var(--clr-primary-5);
+  margin-bottom: 0.25rem;
+}
+.review-container .text {
+  max-width: 35em;
+  margin: 0 auto;
+  margin-top: 2rem;
+  line-height: 2;
+  color: var(--clr-grey-5);
+}
+.review-container .icon {
+  font-size: 3rem;
+  margin-top: 1rem;
+  color: var(--clr-primary-5);
+}
+.review-container .prev,
+.review-container .next {
+  position: absolute;
+  top: 200px;
+  transform: translateY(-50%);
+  background: var(--clr-grey-5);
+  color: var(--clr-white);
+  width: 1.25rem;
+  height: 1.25rem;
+  display: grid;
+  place-items: center;
+  border-color: transparent;
+  font-size: 1rem;
+  border-radius: var(--radius);
+  cursor: pointer;
+  transition: var(--transition);
+}
+.review-container .prev:hover,
+.review-container .next:hover {
+  background: var(--clr-primary-5);
+}
+.review-container .prev {
+  left: 0;
+}
+.review-container .next {
+  right: 0;
+}
+@media (min-width: 800px) {
+  .review-container .text {
+    max-width: 45em;
+  }
+  .review-container .prev,
+  .review-container .next {
+    width: 2rem;
+    height: 2rem;
+    font-size: 1.5rem;
+  }
+}
+.review-container article {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: var(--transition);
+}
+.review-container article.activeSlide {
+  opacity: 1;
+  transform: translateX(0);
+}
+.review-container article.lastSlide {
+  transform: translateX(-100%);
+}
+.review-container article.nextSlide {
+  transform: translateX(100%);
 }/*# sourceMappingURL=globals.css.map */
