--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -429,11 +429,11 @@ body {
         overflow: hidden;
       }
       .person-img {
-        border-radius: 50%;
+        border-radius: 5%;
         margin-bottom: 1rem;
-        width: 150px;
+        width: 350px;
         height: 150px;
-        object-fit: cover;
+        object-fit: contain;
         border: 4px solid var(--clr-grey-8);
         box-shadow: var(--dark-shadow);
       }
