--- a/styles/globals.css
+++ b/styles/globals.css
@@ -391,7 +391,7 @@ body {
   margin-bottom: 1rem;
   width: 350px;
   height: 150px;
-  object-fit: contain;
+  object-fit: scale-down;
   border: 4px solid var(--clr-grey-8);
   box-shadow: var(--dark-shadow);
 }
