--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -345,7 +345,7 @@ body {
 // IMAGE SLIDER
 .imageSlider__container {
     position: relative;
-    height: 60vh;
+    height: 50vh;
     display: flex;
     
     .imageSlider__item {
@@ -402,7 +402,7 @@ body {
         text-align: center;
         margin-bottom: 2rem;
         text-transform: capitalize;
-        color: var(--clr-grey-3);
+        color: var(--color-secondary);
       }
       .title h2 {
         display: flex;
@@ -412,7 +412,7 @@ body {
       }
       .title span {
         font-size: 0.85em;
-        color: var(--clr-primary-5);
+        color: var(--color-secondary);
         margin-right: 1rem;
         font-weight: 700;
       }
@@ -434,12 +434,12 @@ body {
         width: 350px;
         height: 150px;
         object-fit: scale-down;
-        border: 4px solid var(--clr-grey-8);
-        box-shadow: var(--dark-shadow);
+        border: 2px solid var(--color-secondary);
+        box-shadow: var(--color-lightblack);
       }
       article h4 {
         text-transform: uppercase;
-        color: var(--clr-primary-5);
+        color: var(--color-lightblack);
         margin-bottom: 0.25rem;
       }
       .text {
@@ -447,33 +447,33 @@ body {
         margin: 0 auto;
         margin-top: 2rem;
         line-height: 2;
-        color: var(--clr-grey-5);
+        color: var(--color-lightblack);
       }
       .icon {
         font-size: 3rem;
         margin-top: 1rem;
-        color: var(--clr-primary-5);
+        color: var(--color-lightblack);
       }
       .prev,
       .next {
         position: absolute;
         top: 200px;
         transform: translateY(-50%);
-        background: var(--clr-grey-5);
-        color: var(--clr-white);
+        background: var(--color-white);
+        color: var(--color-primary);
         width: 1.25rem;
         height: 1.25rem;
         display: grid;
         place-items: center;
         border-color: transparent;
         font-size: 1rem;
-        border-radius: var(--radius);
+        border-radius: 50%;
         cursor: pointer;
         transition: var(--transition);
       }
       .prev:hover,
       .next:hover {
-        background: var(--clr-primary-5);
+        background: var(--color-primary);
       }
       .prev {
         left: 0;
@@ -499,7 +499,6 @@ body {
         width: 100%;
         height: 100%;
         opacity: 0;
-        transition: var(--transition);
       }
       article.activeSlide {
         opacity: 1;
@@ -511,4 +510,11 @@ body {
       article.nextSlide {
         transform: translateX(100%);
       }
+}
+
+// BANNER ABOUT COMPANY
+
+.bannerAbout__container {
+  background-color: var(--color-white);
+
 }
